# FaceRecognition

./: .gitignore  Dockerfile  README.md  alembic.ini  cx.py  docker-compose.yaml  main.py  pyproject.toml
face_recognition/api/: __init__.py
face_recognition/api/recognition/: __init__.py  crud.py  dependencies.py  schemas.py  task_queries.py  views.py
face_recognition/core/database/alembic/: env.py
face_recognition/core/database/alembic/versions/: 2024_09_14_1310-37ea2fe142e2_task_model.py  2024_09_14_1311-c3b41ec8f667_task_image_model.py  2024_09_14_1549-c11851eebabf_task_model.py  2024_09_14_1739-14bb18e99068_task_model.py  2024_09_14_1744-8887b7c7affa_task_model.py  2024_09_14_1751-cf0ae336f768_task_image_model.py  2024_09_14_2358-c1f4ce4defab_task_model.py  2024_09_15_0035-ff61d185c5c8_task_image_model.py  2024_09_15_1204-a62043c24f45_image_face_model.py  2024_09_15_1214-d157e04cc726_face_bbox_model.py  2024_09_15_1813-60bf4c5006d4_added_image_path_to_task_image_model.py  c246dfb87da2_task_model.py
face_recognition/core/database/models/: __init__.py  base.py  bbox_face.py  choices.py  image_face.py  task.py  task_image.py  task_image_face.py
face_recognition/core/database/models/mixins/: __init__.py
face_recognition/core/helpers/: db_helper.py
face_recognition/core/settings/: config.py
face_recognition/tools/: errors.py  utils.py
