[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = ["Pasha Ryaguzov <pashajobber@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
orjson = "^3.10.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
